--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-popover": "1.0.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
